test_suite/alan-2022-examples/failing/003040_mutation.alan
source Lg1 begin if 6 then = end end
